k8s/backend/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedjobs-backend
  namespace: skala-practice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: speedjobs-backend
  template:
    metadata:
      labels:
        app: speedjobs-backend
    spec:
      serviceAccountName: default
      containers:
      - name: speedjobs-backend
        image: amdp-registry.skala-ai.com/skala25a/speedjobs-backend:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: "500m"
            memory: 2Gi
          limits:
            cpu: "2"
            memory: 4Gi
        livenessProbe:
          httpGet:
            path: /docs
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 30
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /docs
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 30
          failureThreshold: 3
        volumeMounts:
        - name: app-data
          mountPath: /app/data/output
        - name: chroma-db
          mountPath: /app/AI_Lab/chroma_db
      volumes:
      - name: app-data
        emptyDir: {}
      - name: chroma-db
        emptyDir: {}
      restartPolicy: Always
